@@ -47,8 +47,6 @@ None by default.
 
 =head1 BUGS
 
- under windows builds only in cygwin
-
 =head1 AUTHOR
 
 Oleg Alexeenkov, E<lt>pro@cpan.orgE<gt>
